test/1.4/errors/T_ESYNTAX_struct.dml
/*
  © 2021 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.4;

device test;

// This syntax was removed in dml 1.4

/// ERROR ESYNTAX
struct x {
    int i;
}
